--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,6 +12,7 @@ phases:
             - echo "Post build phase"
 artifacts:
     files:
+        - scripts/install_dependencies
         - scripts/start_server
         - scripts/stop_server
         - index.html
